5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1758_1576.log
== TEST (2019-05-23 11:13:24) 
-- CODE:
from numpy import*
E = array(eval(input("jogadas de Eusapia: ")))
B = array(eval(input("jogadas de Barsanulfo: ")))

i = 0
ca = 0
cb = 0
while(i < size(E)):
	
	if((E(i) == 11) and (B(i) == 33) or (E(i)==22) and (B(i) == 11) or (E(i) == 33) and (B(i) == 22)):
	cb = cb + 1
	i = i + 1
	elif((B(i) == 11) and (E(i) == 33) or (B(i) == 22) and (E(i) == 11) or (B(i)==33) and (E(i)==22)):
	ca = ca + 1
	i = i + 1
	else:
		i = i + 1
	
print(size(E))
if(cb > ca):
	print("BARSANULFO")
elif(ca > cb):
	print("EUSAPIA")
else:
	print("EMPATE")
-- ERROR:
File "XXXX", line 11
    cb = cb + 1
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:14:04) 
-- CODE:
from numpy import*
E = array(eval(input("jogadas de Eusapia: ")))
B = array(eval(input("jogadas de Barsanulfo: ")))

i = 0
ca = 0
cb = 0
while(i < size(E)):
	
	if((E(i) == 11) and (B(i) == 33) or (E(i)==22) and (B(i) == 11) or (E(i) == 33) and (B(i) == 22)):
		cb = cb + 1
		i = i + 1
	elif((B(i) == 11) and (E(i) == 33) or (B(i) == 22) and (E(i) == 11) or (B(i)==33) and (E(i)==22)):
		ca = ca + 1
		i = i + 1
	else:
		i = i + 1
	
print(size(E))
if(cb > ca):
	print("BARSANULFO")
elif(ca > cb):
	print("EUSAPIA")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:16:52) 
-- CODE:
from numpy import*
E = array(eval(input("jogadas de Eusapia: ")))
B = array(eval(input("jogadas de Barsanulfo: ")))

i = 0
ca = 0
cb = 0
while(i < size(E)):
	
	if(E(i) == 11) and (B(i) == 33) or (E(i)==22) and (B(i) == 11) or (E(i) == 33) and (B(i) == 22):
		cb = cb + 1
		i = i + 1
	elif(B(i) == 11) and (E(i) == 33) or (B(i) == 22) and (E(i) == 11) or (B(i)==33) and (E(i)==22):
		ca = ca + 1
		i = i + 1
	else:
		i = i + 1
	
print(size(E))
if(cb > ca):
	print("BARSANULFO")
elif(ca > cb):
	print("EUSAPIA")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:20:05) 
-- CODE:
from numpy import*
E = array(eval(input("jogadas de Eusapia: ")))
B = array(eval(input("jogadas de Barsanulfo: ")))

i = 0
ca = 0
cb = 0
while(i < size(E)):
	
	if(E(i) == 11) and (B(i) == 33) or (E(i)==22) and (B(i) == 11) or (E(i) == 33) and (B(i) == 22):
		cb = cb + 1
		i = i + 1
	elif(B(i) == 11) and (E(i) == 33) or (B(i) == 22) and (E(i) == 11) or (B(i) == 33) and (E(i) == 22):
		ca = ca + 1
		i = i + 1
	else:
		i = i + 1
	
print(size(E))
if(cb > ca):
	print("BARSANULFO")
elif(ca > cb):
	print("EUSAPIA")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:24:56) 
-- CODE:
from numpy import*
E = array(eval(input("jogadas de Eusapia: ")))
B = array(eval(input("jogadas de Barsanulfo: ")))

i = 0
ca = 0
cb = 0
while(i < size(E)):
	
	if(E[i] == 11) and (B[i] == 33) or (E[i]==22) and (B[i] == 11) or (E[i] == 33) and (B[i] == 22):
		cb = cb + 1
		i = i + 1
	elif(B[i] == 11) and (E[i] == 33) or (B[i] == 22) and (E[i] == 11) or (B([i] == 33) and (E[i] == 22):
		ca = ca + 1
		i = i + 1
	else:
		i = i + 1
	
print(size(E))
if(cb > ca):
	print("BARSANULFO")
elif(ca > cb):
	print("EUSAPIA")
else:
	print("EMPATE")
-- ERROR:
File "XXXX", line 13
    elif(B[i] == 11) and (E[i] == 33) or (B[i] == 22) and (E[i] == 11) or (B([i] == 33) and (E[i] == 22):
                                                                                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:25:58) 
-- CODE:
from numpy import*
E = array(eval(input("jogadas de Eusapia: ")))
B = array(eval(input("jogadas de Barsanulfo: ")))

i = 0
ca = 0
cb = 0
while(i < size(E)):
	
	if(E[i] == 11) and (B[i] == 33) or (E[i]==22) and (B[i] == 11) or (E[i] == 33) and (B[i] == 22):
		cb = cb + 1
		i = i + 1
	elif(B[i] == 11) and (E[i] == 33) or (B[i] == 22) and (E[i] == 11) or (B[i] == 33) and (E[i] == 22):
		ca = ca + 1
		i = i + 1
	else:
		i = i + 1
	
print(size(E))
if(cb > ca):
	print("BARSANULFO")
elif(ca > cb):
	print("EUSAPIA")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:27:06) 
-- CODE:
from numpy import*
E = array(eval(input("jogadas de Eusapia: ")))
B = array(eval(input("jogadas de Barsanulfo: ")))

i = 0
ca = 0
cb = 0
while(i < size(E)):
	
	if(E[i] == 11) and (B[i] == 33) or (E[i]==22) and (B[i] == 11) or (E[i] == 33) and (B[i] == 22):
		cb = cb + 1
		i = i + 1
	elif(B[i] == 11) and (E[i] == 33) or (B[i] == 22) and (E[i] == 11) or (B[i] == 33) and (E[i] == 22):
		ca = ca + 1
		i = i + 1
	else:
		i = i + 1
	
print(size(E))
if(cb > ca):
	print("BARSANULFO")
elif(ca > cb):
	print("EUSAPIA")
else:
	print("EMPATE")
-- EXECUTION TIME:
0.436778
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
BARSANULFO
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EUSAPIA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:27:56) 
-- CODE:
from numpy import*
E = array(eval(input("jogadas de Eusapia: ")))
B = array(eval(input("jogadas de Barsanulfo: ")))

i = 0
ca = 0
cb = 0
while(i < size(E)):
	
	if(E[i] == 11) and (B[i] == 33) or (E[i]==22) and (B[i] == 11) or (E[i] == 33) and (B[i] == 22):
		cb = cb + 1
		i = i + 1
	elif(B[i] == 11) and (E[i] == 33) or (B[i] == 22) and (E[i] == 11) or (B[i] == 33) and (E[i] == 22):
		ca = ca + 1
		i = i + 1
	else:
		i = i + 1
	
print(i)
if(cb > ca):
	print("BARSANULFO")
elif(ca > cb):
	print("EUSAPIA")
else:
	print("EMPATE")
-- EXECUTION TIME:
0.481754
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
BARSANULFO
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EUSAPIA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:28:03) 
-- CODE:
from numpy import*
E = array(eval(input("jogadas de Eusapia: ")))
B = array(eval(input("jogadas de Barsanulfo: ")))

i = 0
ca = 0
cb = 0
while(i < size(E)):
	
	if(E[i] == 11) and (B[i] == 33) or (E[i]==22) and (B[i] == 11) or (E[i] == 33) and (B[i] == 22):
		cb = cb + 1
		i = i + 1
	elif(B[i] == 11) and (E[i] == 33) or (B[i] == 22) and (E[i] == 11) or (B[i] == 33) and (E[i] == 22):
		ca = ca + 1
		i = i + 1
	else:
		i = i + 1
	
print(i)
if(cb > ca):
	print("BARSANULFO")
elif(ca > cb):
	print("EUSAPIA")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:28:07) 
-- CODE:
from numpy import*
E = array(eval(input("jogadas de Eusapia: ")))
B = array(eval(input("jogadas de Barsanulfo: ")))

i = 0
ca = 0
cb = 0
while(i < size(E)):
	
	if(E[i] == 11) and (B[i] == 33) or (E[i]==22) and (B[i] == 11) or (E[i] == 33) and (B[i] == 22):
		cb = cb + 1
		i = i + 1
	elif(B[i] == 11) and (E[i] == 33) or (B[i] == 22) and (E[i] == 11) or (B[i] == 33) and (E[i] == 22):
		ca = ca + 1
		i = i + 1
	else:
		i = i + 1
	
print(i)
if(cb > ca):
	print("BARSANULFO")
elif(ca > cb):
	print("EUSAPIA")
else:
	print("EMPATE")
-- EXECUTION TIME:
0.329636
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
BARSANULFO
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EUSAPIA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:28:09) 
-- CODE:
from numpy import*
E = array(eval(input("jogadas de Eusapia: ")))
B = array(eval(input("jogadas de Barsanulfo: ")))

i = 0
ca = 0
cb = 0
while(i < size(E)):
	
	if(E[i] == 11) and (B[i] == 33) or (E[i]==22) and (B[i] == 11) or (E[i] == 33) and (B[i] == 22):
		cb = cb + 1
		i = i + 1
	elif(B[i] == 11) and (E[i] == 33) or (B[i] == 22) and (E[i] == 11) or (B[i] == 33) and (E[i] == 22):
		ca = ca + 1
		i = i + 1
	else:
		i = i + 1
	
print(i)
if(cb > ca):
	print("BARSANULFO")
elif(ca > cb):
	print("EUSAPIA")
else:
	print("EMPATE")
-- EXECUTION TIME:
0.34725
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
BARSANULFO
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EUSAPIA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:28:12) 
-- CODE:
from numpy import*
E = array(eval(input("jogadas de Eusapia: ")))
B = array(eval(input("jogadas de Barsanulfo: ")))

i = 0
ca = 0
cb = 0
while(i < size(E)):
	
	if(E[i] == 11) and (B[i] == 33) or (E[i]==22) and (B[i] == 11) or (E[i] == 33) and (B[i] == 22):
		cb = cb + 1
		i = i + 1
	elif(B[i] == 11) and (E[i] == 33) or (B[i] == 22) and (E[i] == 11) or (B[i] == 33) and (E[i] == 22):
		ca = ca + 1
		i = i + 1
	else:
		i = i + 1
	
print(i)
if(cb > ca):
	print("BARSANULFO")
elif(ca > cb):
	print("EUSAPIA")
else:
	print("EMPATE")
-- EXECUTION TIME:
0.397347
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
BARSANULFO
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EUSAPIA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:29:10) 
-- CODE:
from numpy import*
E = array(eval(input("jogadas de Eusapia: ")))
B = array(eval(input("jogadas de Barsanulfo: ")))

i = 0
ca = 0
cb = 0
while(i < size(E)):
	
	if(E[i] == 11) and (B[i] == 33) or (E[i]==22) and (B[i] == 11) or (E[i] == 33) and (B[i] == 22):
		ca = ca + 1
		i = i + 1
	elif(B[i] == 11) and (E[i] == 33) or (B[i] == 22) and (E[i] == 11) or (B[i] == 33) and (E[i] == 22):
		cb = cb + 1
		i = i + 1
	else:
		i = i + 1
	
print(i)
if(cb > ca):
	print("BARSANULFO")
elif(ca > cb):
	print("EUSAPIA")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:29:13) 
-- CODE:
from numpy import*
E = array(eval(input("jogadas de Eusapia: ")))
B = array(eval(input("jogadas de Barsanulfo: ")))

i = 0
ca = 0
cb = 0
while(i < size(E)):
	
	if(E[i] == 11) and (B[i] == 33) or (E[i]==22) and (B[i] == 11) or (E[i] == 33) and (B[i] == 22):
		ca = ca + 1
		i = i + 1
	elif(B[i] == 11) and (E[i] == 33) or (B[i] == 22) and (E[i] == 11) or (B[i] == 33) and (E[i] == 22):
		cb = cb + 1
		i = i + 1
	else:
		i = i + 1
	
print(i)
if(cb > ca):
	print("BARSANULFO")
elif(ca > cb):
	print("EUSAPIA")
else:
	print("EMPATE")
-- EXECUTION TIME:
0.4278
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
